corrigiendo nombre web y portafolio

--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="es">
     <head>
         <meta charset="utf-8" />
-        <meta />
-        <meta />
         <meta name="description" content="Aprendiendo html" />
         <meta name="author" content="Leon Alfredo Viera" />
         <meta name="keywords" content="mi segunda web, aprendiendo html y css">
-        <title>LAVC mi Primera Web</title>
+        <title>LAVC ED-0041 EjerEval_M5</title>
         <link rel="shortcut icon" href="assets/img/lavc_9.ico" type="image/x-icon">
         <link rel="stylesheet" href="assets/css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&display=swap" rel="stylesheet">
@@ -59,7 +57,7 @@
             </section>
             <section class="portafolio">
                 <div class="contenedor">
-                    <h2 class="tilulo">Portafolio</h2>
+                    <h2 class="titulo">Portafolio</h2>
                     <div class="galeria-port">
                         <div class="imagen-port">
                             <img src="assets/img/x1.jpg" alt="">
